--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -1633,6 +1633,10 @@ body {
 .cid-qCbkipJGN6 .collapsed .navbar-collapse.show .navbar-nav .nav-item {
   clear: both;
 }
+.cid-qCbkipJGN6 .collapsed .navbar-collapse.collapsing .navbar-nav .nav-item:last-child,
+.cid-qCbkipJGN6 .collapsed .navbar-collapse.show .navbar-nav .nav-item:last-child {
+  margin-bottom: 1rem;
+}
 .cid-qCbkipJGN6 .collapsed .navbar-collapse.collapsing .navbar-buttons,
 .cid-qCbkipJGN6 .collapsed .navbar-collapse.show .navbar-buttons {
   text-align: center;
@@ -1726,6 +1730,10 @@ body {
   .cid-qCbkipJGN6 .navbar-collapse.collapsing .navbar-nav .nav-item,
   .cid-qCbkipJGN6 .navbar-collapse.show .navbar-nav .nav-item {
     clear: both;
+  }
+  .cid-qCbkipJGN6 .navbar-collapse.collapsing .navbar-nav .nav-item:last-child,
+  .cid-qCbkipJGN6 .navbar-collapse.show .navbar-nav .nav-item:last-child {
+    margin-bottom: 1rem;
   }
   .cid-qCbkipJGN6 .navbar-collapse.collapsing .navbar-buttons,
   .cid-qCbkipJGN6 .navbar-collapse.show .navbar-buttons {
@@ -2267,6 +2275,57 @@ body {
   transition: 0.2s opacity ease-in-out;
 }
 .cid-qCbBmthn5V .mbr-gallery-title {
+  font-size: .9em;
+  position: absolute;
+  display: block;
+  width: 100%;
+  bottom: 0;
+  padding: 1rem;
+  color: #fff;
+  background: linear-gradient(to left, rgba(85, 67, 70, 0.85), rgba(69, 80, 91, 0.85)) !important;
+  -webkit-transition: 0.2s background ease-in-out;
+  transition: 0.2s background ease-in-out;
+}
+.cid-qN7MwLVa0V {
+  padding-top: 0px;
+  padding-bottom: 0px;
+  background-color: #ffffff;
+}
+.cid-qN7MwLVa0V .mbr-text {
+  color: #232323;
+}
+.cid-qN7MZ6C3Ad {
+  padding-top: 0px;
+  padding-bottom: 135px;
+  background-color: #ffffff;
+}
+.cid-qN7MZ6C3Ad .mbr-slider .carousel-control {
+  background: #1b1b1b;
+}
+.cid-qN7MZ6C3Ad .mbr-slider .carousel-control-prev {
+  left: 0;
+  margin-left: 2.5rem;
+}
+.cid-qN7MZ6C3Ad .mbr-slider .carousel-control-next {
+  right: 0;
+  margin-right: 2.5rem;
+}
+.cid-qN7MZ6C3Ad .mbr-slider .modal-body .close {
+  background: #1b1b1b;
+}
+.cid-qN7MZ6C3Ad .mbr-gallery-item > div::before {
+  content: '';
+  position: absolute;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  background: linear-gradient(to left, #554346, #45505b) !important;
+  opacity: 0;
+  -webkit-transition: 0.2s opacity ease-in-out;
+  transition: 0.2s opacity ease-in-out;
+}
+.cid-qN7MZ6C3Ad .mbr-gallery-title {
   font-size: .9em;
   position: absolute;
   display: block;
