--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -2345,16 +2345,27 @@ body {
 .cid-qNAiFjGzCV .mbr-text {
   color: #232323;
 }
-.cid-qNAiOGx33t {
-  padding-top: 75px;
-  padding-bottom: 60px;
+.cid-qPyPkMEam0 {
   background: #ffffff;
 }
-.cid-qNAiOGx33t .video-block {
+.cid-qPyPkMEam0 .video-block {
   margin: auto;
+  width: 100% !important;
 }
 @media (max-width: 768px) {
-  .cid-qNAiOGx33t .video-block {
+  .cid-qPyPkMEam0 .video-block {
+    width: 100% !important;
+  }
+}
+.cid-qPyPn8Gxfa {
+  background: #ffffff;
+}
+.cid-qPyPn8Gxfa .video-block {
+  margin: auto;
+  width: 100% !important;
+}
+@media (max-width: 768px) {
+  .cid-qPyPn8Gxfa .video-block {
     width: 100% !important;
   }
 }
