--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -1337,9 +1337,6 @@ body {
   height: auto;
   min-height: 100vh;
 }
-.cid-qC5m83pdJp {
-  background-image: url("../../../assets/images/2print.jpg");
-}
 .cid-qC5m83pdJp H1 {
   color: #ffffff;
   text-align: center;
@@ -1351,60 +1348,6 @@ body {
 .cid-qC5m83pdJp .mbr-text,
 .cid-qC5m83pdJp .mbr-section-btn {
   text-align: right;
-}
-.cid-qC5vYeVvIG .mbr-media span {
-  font-size: 48px;
-  cursor: pointer;
-  background-color: #ffffff;
-  border-radius: 50%;
-  width: 6rem;
-  height: 6rem;
-  line-height: 6rem;
-  position: relative;
-  display: inline-block;
-  transition: all 0.25s;
-  color: #353535;
-}
-.cid-qC5vYeVvIG .mbr-media span.mbri-play:before {
-  position: absolute;
-  left: 50%;
-  -webkit-transform: translateX(-35%);
-  -moz-transform: translateX(-35%);
-  -ms-transform: translateX(-35%);
-  -o-transform: translateX(-35%);
-  transform: translateX(-35%);
-}
-.cid-qC5vYeVvIG .modalWindow {
-  position: fixed;
-  z-index: 5000;
-  left: 0;
-  top: 0;
-  background-color: rgba(61, 61, 61, 0.65);
-  width: 100%;
-  height: 100%;
-}
-.cid-qC5vYeVvIG .modalWindow .modalWindow-container {
-  display: table-cell;
-  vertical-align: middle;
-}
-.cid-qC5vYeVvIG .modalWindow .modalWindow-video {
-  height: calc(44.9943757vw);
-  width: 80vw;
-  margin: 0 auto;
-}
-.cid-qC5vYeVvIG a.close {
-  position: absolute;
-  right: 4vw;
-  top: 4vh;
-  color: #ffffff;
-  z-index: 5000000;
-  font-size: 37px;
-  background: #000;
-  padding: 20px;
-  border-radius: 50%;
-}
-.cid-qC5vYeVvIG a.close:hover {
-  color: #ffffff;
 }
 .cid-qCbkipJGN6 .navbar {
   padding: .5rem 0;
@@ -2685,6 +2628,57 @@ body {
 }
 .cid-rn9AcCnMVz .content-slider-wrap {
   width: 100%;
+}
+.cid-roXNharKqO {
+  padding-top: 30px;
+  padding-bottom: 0px;
+  background-color: #ffffff;
+}
+.cid-roXNharKqO .mbr-text {
+  color: #232323;
+}
+.cid-roXNnY46AY {
+  padding-top: 0px;
+  padding-bottom: 135px;
+  background-color: #ffffff;
+}
+.cid-roXNnY46AY .mbr-slider .carousel-control {
+  background: #1b1b1b;
+}
+.cid-roXNnY46AY .mbr-slider .carousel-control-prev {
+  left: 0;
+  margin-left: 2.5rem;
+}
+.cid-roXNnY46AY .mbr-slider .carousel-control-next {
+  right: 0;
+  margin-right: 2.5rem;
+}
+.cid-roXNnY46AY .mbr-slider .modal-body .close {
+  background: #1b1b1b;
+}
+.cid-roXNnY46AY .mbr-gallery-item > div::before {
+  content: '';
+  position: absolute;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  background: linear-gradient(to left, #554346, #45505b) !important;
+  opacity: 0;
+  -webkit-transition: 0.2s opacity ease-in-out;
+  transition: 0.2s opacity ease-in-out;
+}
+.cid-roXNnY46AY .mbr-gallery-title {
+  font-size: .9em;
+  position: absolute;
+  display: block;
+  width: 100%;
+  bottom: 0;
+  padding: 1rem;
+  color: #fff;
+  background: linear-gradient(to left, rgba(85, 67, 70, 0.85), rgba(69, 80, 91, 0.85)) !important;
+  -webkit-transition: 0.2s background ease-in-out;
+  transition: 0.2s background ease-in-out;
 }
 .cid-qCbDExULM2 {
   background-color: #ffffff;
